[package]
name = "cryptography-test"
description = "Easily verifiable implementations of crypto algorithms"
version = "3.1.0"
authors = ["ElijahPepe <business@elijahpepe.com>"]
repository = "https://github.com/cryptography-test"
license = "MIT"
categories = ["cryptography"]
keywords = ["crypto","sha256","hmac","pbkdf2","scrypt"]
exclude = [".travis.yml"]
edition = "2021"

[dependencies]

[badges]
travis-ci = { repository = "elijahpepe/cryptography-test" }
